First version which actually seems to work - OWRT bird7 config actually works. TODO: Fix non-OWRT bird7.

--- a/node/bird-lua.template
+++ b/node/bird-lua.template
@@ -1,2 +1,3 @@
 # Just skeleton for using Bird-lua, but not starting it (this
 # can be used by anyone who wants to use e.g. birdenv.sh)
+inherit=hnet-build
