First iteration of actually working Debian-based test build. Much faster iteration, which is a plus. (Instead of using the OWRT images.)

--- a/node/bird-lua.template
+++ b/node/bird-lua.template
@@ -1,3 +1,5 @@
-# Just skeleton for using Bird-lua, but not starting it (this
-# can be used by anyone who wants to use e.g. birdenv.sh)
+# Just skeleton for using Bird-lua, but not starting it (this can be
+# used by anyone who wants to use e.g. luaenv.sh [which provides Lua
+# stuff on top of hnetenv.sh, which provides base binaries +
+# HNET+BUILD+CORE env variables])
 inherit=hnet-build
