Added second server to both DHCPv4 and DHCPv6 results. And it resulted in finding few bugs.

--- a/node/isp6d-ra/etc/dibbler/server.conf
+++ b/node/isp6d-ra/etc/dibbler/server.conf
@@ -38,7 +38,7 @@ iface "eth0" {
 # provide DNS server location to the clients
 # option dns-server 2000::ff,2000::fe
 # option dns-server 2000:dead::1
- option dns-server 2000::2
+ option dns-server 2000::2,2001:100::1
  
 # provide their domain name
 # option domain example.com
