Changed the bird6.conf used in Debian topologies to be consistent with bird6.conf in OWRT feed (=> /etc/router_id is renamed /etc/bird6.router_id.txt)

--- a/node/bird/etc/bird6.conf
+++ b/node/bird/etc/bird6.conf
@@ -4,7 +4,7 @@
 #log "/tmp/bird6.log" all;
 
 router id random; # can be overridden by specific protocols
-router id remember "/etc/router_id";
+router id remember "/etc/bird6.router_id.txt";
 
 debug protocols all;
 
