Uncommented the console changes again - default OWRT uml target doesn't have tty1 console, so depending on it is kind of bad idea.

--- a/node/openwrt.template
+++ b/node/openwrt.template
@@ -4,10 +4,10 @@ model-fs=../../openwrt-uml-bin/openwrt-uml-ext4.img
 
 # Use console 1 for i/o (-> control+c should work)
 # and take console 0 output also to stderr
-append_con1=con=null
-append_con2=con1=fd:0,fd:1
-append_con3=con0=null,fd:2
-append_con4=console=tty1
+#append_con1=con=null
+#append_con2=con1=fd:0,fd:1
+#append_con3=con0=null,fd:2
+#append_con4=console=tty1
 
 # override preinit
 #append_init=init=/sbin/preinit
