Added commented old same-if-twice case to bird14.

--- a/topology/bird14.conf
+++ b/topology/bird14.conf
@@ -28,6 +28,8 @@ bird4[2]=BIRD48
 
 bird5[0]=BIRD15
 bird5[1]=BIRD56
+# intentionally two interfaces on same switch, see what happens
+#bird5[2]=BIRD56
 
 bird6[0]=BIRD56
 bird6[1]=BIRD69
