--- a/topology/bird7.conf
+++ b/topology/bird7.conf
@@ -53,7 +53,8 @@ bird3[0]=BIRD1
 bird3[1]=BIRD3
 
 # TAP interface to the bird so we should be able to ping isp.. eventually.
-bird3[2]=tap,192.168.7.1,192.168.7.2
+#bird3[2]=tap,192.168.7.1,192.168.7.2
+#(this may wind up with interface being treated as external)
 
 # Another place to attach the TAP interface - to the client
 #client[1]=tap,192.168.7.1,192.168.7.2
