Added second port connected to same network, just to make sure that case works too.

--- a/topology/bird14.conf
+++ b/topology/bird14.conf
@@ -11,6 +11,10 @@ bird8[template]=bird
 bird9[template]=bird
 bird10[template]=bird
 
+# Networks are in general named based on source + destination router,
+# e.g.  BIRD23 is between BIRD2+3. Only notable exception is 'HOME'
+# which cpe is connected to (and two birds). 
+
 bird1[0]=HOME
 bird1[1]=BIRD12
 bird1[2]=BIRD15
@@ -29,7 +33,7 @@ bird4[2]=BIRD48
 bird5[0]=BIRD15
 bird5[1]=BIRD56
 # intentionally two interfaces on same switch, see what happens
-#bird5[2]=BIRD56
+bird5[2]=BIRD56
 
 bird6[0]=BIRD56
 bird6[1]=BIRD69
