Finished the isp-node rearch project - now should be able to select appropriate ISP type for topologies.

--- a/node/isp.template
+++ b/node/isp.template
@@ -1,5 +1,9 @@
 inherit=lsadr
+
+# Addresses are provided here; however, downstream assignment services
+# are in the various isp sub-classes.
 0=ISP,192.168.100.1,ipv6:2000:dead::1/64
 1=REST,192.168.10.100,ipv6:2000::2/64
+
 mem=64
 ns=isp
