--- a/topology/bird7.conf
+++ b/topology/bird7.conf
@@ -21,7 +21,7 @@ machines="client cpe isp server bird1 bird2 bird3"
 # server is by default on 'REST' network
 server[template]=server
 
-isp[template]=isp6d-ra
+isp[template]=isp4-6
 
 # client is by default on HOME network, with DHCP for v4
 client[template]=client
