--- a/topology/mhbird10.conf
+++ b/topology/mhbird10.conf
@@ -11,8 +11,8 @@ cpe2[2]=ISP3,dhcp
 cpe2[0]=HOME2
 bird2[2]=HOME2
 
-isp2[template]=isp6d-ra
-isp3[template]=isp6d-ra
+isp2[template]=isp4-6
+isp3[template]=isp4-6
 
 isp2[0]=ISP2,192.168.110.1,ipv6:2000:cafe::1/64,ipv6ra
 isp2[1]=REST,192.168.10.102,ipv6:2000::3/64
