--- a/node/isp6/etc/dibbler/server.conf
+++ b/node/isp6/etc/dibbler/server.conf
@@ -38,7 +38,12 @@ iface "eth0" {
 # provide DNS server location to the clients
 # option dns-server 2000::ff,2000::fe
 # option dns-server 2000:dead::1
- option dns-server 2000::2,2001:100::1
+
+# Just one DNS server in vanilla isp6 config
+option dns-server 2000::2
+
+# 2001:: is the 6rd prefix -> not available in nilla config
+# option dns-server 2000::2,2001:100::1
  
 # provide their domain name
 # option domain example.com
