Some refactoring to add 'common' base template to all, and provide /etc/netkit.d/ hooks there to (re) configure services out of inheritance order.

--- a/node/client.template
+++ b/node/client.template
@@ -1,3 +1,5 @@
+inherit=common
+
 # Basically, the only interface is tied to network called 'HOMENET' for now,
 # and DHCP is used to configure IPv4
 
