--- a/node/isp.template
+++ b/node/isp.template
@@ -1,4 +1,4 @@
-inherit=lsadr
+inherit=common,lsadr
 
 # Addresses are provided here; however, downstream assignment services
 # are in the various isp sub-classes.
