Great rename operation. Topologies have home prefix now, inner routers ir, and node names are router / owrt-router prefixed.

--- a/topology/home10-3isp.conf
+++ b/topology/home10-3isp.conf
@@ -1,15 +1,15 @@
-# Based on bird7; adding isp2, isp3, cpe2 nodes 
+# Based on router7; adding isp2, isp3, cpe2 nodes 
 # (we have two ISP connections on cpe2)
 
-LAB_DESCRIPTION="10 hosts - client, 3 Bird inner, 2 Bird CER, 3 isp, 1 server"
-inherit=bird7
-machines="client cpe cpe2 isp isp2 isp3 server bird1 bird2 bird3"
+LAB_DESCRIPTION="10 hosts - client, 3 inner routers, 2 CER, 3 isp, 1 server"
+inherit=home7
+machines="client cpe cpe2 isp isp2 isp3 server ir1 ir2 ir3"
 
-cpe2[template]=bird
+cpe2[template]=router
 cpe2[1]=ISP2,dhcp
 cpe2[2]=ISP3,dhcp
 cpe2[0]=HOME2
-bird2[2]=HOME2
+ir2[2]=HOME2
 
 isp2[template]=isp4-6
 isp3[template]=isp4-6
