--- a/topology/home7.conf
+++ b/topology/home7.conf
@@ -1,22 +1,22 @@
 # REST network has
 # server
 # HOME network has
-# cpe, bird1 [=>BIRD1], bird2 [=>BIRD2]
-# BIRD1 has:
-# bird1, bird3 [+BIRD3]
-# BIRD2 has:
-# bird2
-# BIRD3 has:
+# cpe, router1 [=>ROUTER1], router2 [=>ROUTER2]
+# ROUTER1 has:
+# router1, router3 [+ROUTER3]
+# ROUTER2 has:
+# router2
+# ROUTER3 has:
 # client
 
 # => the route to 'the world' goes like
-# client -> bird3 -> bird1 -> cpe -> isp -> server
+# client -> router3 -> router1 -> cpe -> isp -> server
 # (woah)
 
 LAB_AUTHOR="Markus Stenberg"
 LAB_EMAIL="mstenber@cisco.com"
-LAB_DESCRIPTION="Not-so-minimalist setup with 3 inner routers and CER running BIRD"
-machines="client cpe isp server bird1 bird2 bird3"
+LAB_DESCRIPTION="Not-so-minimalist setup with 3 inner routers and CER running ROUTER"
+machines="client cpe isp server ir1 ir2 ir3"
 
 # server is by default on 'REST' network
 server[template]=server
@@ -25,35 +25,35 @@ isp[template]=isp4-6
 
 # client is by default on HOME network, with DHCP for v4
 client[template]=client
-client[0]=BIRD3
+client[0]=ROUTER3
 client[1]=CLIENT
 
-cpe[template]=bird
+cpe[template]=router
 cpe[0]=HOME
 cpe[1]=ISP
 
-bird1[template]=bird
-bird1[0]=HOME
-bird1[1]=BIRD1
+ir1[template]=router
+ir1[0]=HOME
+ir1[1]=ROUTER1
 
-bird1[2]=BIRD2
+ir1[2]=ROUTER2
 # just to make sure we survive two IFs in same hub/switch
 # NOTE: Currently won't form neigh's in this case -> can do this only with
 # redundant links.. sigh. This should be fixed at some point.
-#bird1[2]=BIRD1 
+#router1[2]=ROUTER1 
 
-bird2[template]=bird
-bird2[0]=HOME
+ir2[template]=router
+ir2[0]=HOME
 # just to make sure we survive two IFs in same hub/switch
-bird2[1]=BIRD2
-#bird2[2]=BIRD2
+ir2[1]=ROUTER2
+#router2[2]=ROUTER2
 
-bird3[template]=bird
-bird3[0]=BIRD1
-bird3[1]=BIRD3
+ir3[template]=router
+ir3[0]=ROUTER1
+ir3[1]=ROUTER3
 
-# TAP interface to the bird so we should be able to ping isp.. eventually.
-#bird3[2]=tap,192.168.7.1,192.168.7.2
+# TAP interface to the router so we should be able to ping isp.. eventually.
+#router3[2]=tap,192.168.7.1,192.168.7.2
 #(this may wind up with interface being treated as external)
 
 # Another place to attach the TAP interface - to the client
