--- a/node/client.template
+++ b/node/client.template
@@ -1,9 +1,10 @@
 inherit=common
 
 # Basically, the only interface is tied to network called 'HOMENET' for now,
-# and DHCP is used to configure IPv4
+# and DHCP is used to configure IPv4 if desired (but not by default)
 
-0=HOME,dhcp
+#0=HOME,dhcp
+0=HOME
 
 # TAP interface to the host so we can use e.g. Firefox.
 1=tap,192.168.7.1,192.168.7.2
