Removed dependence on openwrt starting from client - no dhcp anymore by default -> no need to wait.

--- a/topology/ow2.conf
+++ b/topology/ow2.conf
@@ -9,7 +9,9 @@ machines="client openwrt"
 # client -- openwrt ...
 #      0   0   1  
 client[template]=client
-client[depend]=openwrt
+
+# we don't do dhcp by default in client -> no need to depend
+#client[depend]=openwrt
 
 openwrt[template]=openwrt
 
