Made default DHCPv6 /56 predictable (just one).

--- a/node/isp6/etc/dibbler/server.conf
+++ b/node/isp6/etc/dibbler/server.conf
@@ -25,7 +25,8 @@ iface "eth0" {
 
 #assign prefixes from this pool
  pd-class {
-   pd-pool 2000:dead:bee0::/48
+   #pd-pool 2000:dead:bee0::/48 # use this for randomish prefixes
+   pd-pool 2000:dead:bee0::/56
    pd-length 56
  }
 
