Added optional NSA node to the topology. NSA node performs man-in-the-middle attack on everyone, by actually running raw bridge between it's ports that _simulate_ the real world, enabling tcpdump -i any to catch whole network's traffic. Art imiating reality?

--- a/topology/home7.conf
+++ b/topology/home7.conf
@@ -17,6 +17,7 @@ LAB_AUTHOR="Markus Stenberg"
 LAB_EMAIL="mstenber@cisco.com"
 LAB_DESCRIPTION="Not-so-minimalist setup with 3 inner routers and CER running ROUTER"
 machines="client cpe isp server ir1 ir2 ir3"
+# nsa # (if mitm is desired)
 
 # server is by default on 'REST' network
 server[template]=server
@@ -61,3 +62,9 @@ ir3[1]=ROUTER3
 
 # override that we generate this
 skip=
+
+# nsa == magic name; this node will have _every_ interface connected
+# to it, and dynamic bridges set up between the interfaces so that in
+# the end, normal topology _seems_ to work but everything goes through
+# it (of course, nsa also tcpdumps by default everything)
+#nsa[template]=nsa
