Added the nsa configs the Mutate test depends on.

--- a/topology/home7.conf
+++ b/topology/home7.conf
@@ -67,4 +67,4 @@ skip=
 # to it, and dynamic bridges set up between the interfaces so that in
 # the end, normal topology _seems_ to work but everything goes through
 # it (of course, nsa also tcpdumps by default everything)
-#nsa[template]=nsa
+nsa[template]=nsa
