Added test case in which upstream connectivity actually switches ports on router, instead of just changing which network port is connected _to_. Also made it optional to iterate the mutation schemes N times.

--- a/topology/home7.conf
+++ b/topology/home7.conf
@@ -52,9 +52,10 @@ ir2[1]=ROUTER2
 ir3[template]=router
 ir3[0]=ROUTER1
 ir3[1]=ROUTER3
+ir3[2]=ROUTER32
 
 # TAP interface to the router so we should be able to ping isp.. eventually.
-#router3[2]=tap,192.168.7.1,192.168.7.2
+#ir3[3]=tap,192.168.7.1,192.168.7.2
 #(this may wind up with interface being treated as external)
 
 # Another place to attach the TAP interface - to the client
