Removed some redundant skips (and commented out unneccessary ones).

--- a/topology/avahi7.conf
+++ b/topology/avahi7.conf
@@ -2,7 +2,5 @@ LAB_DESCRIPTION="AVAHI reflection testbed"
 inherit=loop7
 shared[template]=avahi
 
-# don't setup by default (can be used to manually skip some cases from
-# automated generation; manual generation can still be done). this is
-# also inherited -> may be used to get rid of whole subclass of cases.
-skip=true
+# uncomment if this is desired (loop5 is skip by default)
+#skip=
