Hardcoded ext_ifname to be correct for generic nodes. Again, not super-elegant, but no point re-implementing whole infra from scratch there.

--- a/node/router/etc/miniupnpd.conf
+++ b/node/router/etc/miniupnpd.conf
@@ -1,4 +1,7 @@
-ext_ifname=eth0
+# NOTE: This is not generally working solution
+ext_ifname=eth1
+# (Should not hardcode ext_ifname..)
+
 listening_ip=lo
 port=5000
 enable_natpmp=yes
