Temporary fix to Dave-case(tm) - give cpe also an address so PCP works.

--- a/topology/home7-owrt-ir3.conf
+++ b/topology/home7-owrt-ir3.conf
@@ -1,3 +1,4 @@
-DESCRIPTION="home7 variant with fixed template for ir3"
+DESCRIPTION="home7 variant with fixed template for ir3(+cpe)"
 inherit=home7
+cpe[template]=owrt-router
 ir3[template]=owrt-router
