node: Did major reorg of how resolv.conf is handled; now it comes from shared 'debian' template.

--- a/node/client.template
+++ b/node/client.template
@@ -1,4 +1,4 @@
-inherit=common
+inherit=common,debian
 
 # Basically, the only interface is tied to network called 'HOMENET' for now,
 # and DHCP is used to configure IPv4 if desired (but not by default)
