Fixed DownPD case - pure openwrt template now also inherits common template, so we can use /etc/netkit.d/ to override what it does at startup time.

--- a/node/openwrt.template
+++ b/node/openwrt.template
@@ -1,3 +1,5 @@
+inherit=common
+
 # ../.. = ttin directory
 kernel=../../openwrt-uml-bin/openwrt-uml-vmlinux
 model-fs=../../openwrt-uml-bin/openwrt-uml-ext4.img
